--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>fhirbase</title>
+    <title>FHIRBase UI</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.40.0/codemirror.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.40.0/addon/hint/show-hint.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.40.0/addon/lint/lint.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.40.0/theme/zenburn.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.40.0/theme/duotone-light.css">
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
@@ -20,16 +20,28 @@
 
     <div id="container">
       <div id="left">
-        <div id="editor" class="cm-s-zenburn">
+        <div id="menu">
+          <h3>FHIRBase UI</h3>
         </div>
-        <div id="hint">Press <span style="color:red;">&lt;ctrl-enter&gt;</span> to run query</div>
+
+        <div id="editor">
+        </div>
+
+        <div id="hint">
+          <div>
+            Press <kbd>Ctrl+Enter</kbd> to run query or click
+            <button id="submit" onclick="submitQuery()" type="button" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
 
         <div id="results"></div>
       </div>
 
-        <div id="right">
-          <h3>Snippets</h3>
-        </div>
+      <div id="right">
+        <h3>Snippets</h3>
+
+        <p>TODO</p>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
