web: add links to demo's menu

--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,11 @@
     <div id="container">
       <div id="left">
         <div id="menu">
-            <a href="https://www.health-samurai.io/fhirbase"><img src="logo.svg"/></a>
+          <a href="https://www.health-samurai.io/fhirbase" data-ga="fb-landing" data-ga-label="Demo page"><img src="logo.svg"/></a>
+
+          <a href="https://www.health-samurai.io/fhirbase-downloads" data-ga="fb-download" data-ga-label="Demo page">Download Fhirbase</a>
+
+          <a href="https://aidbox.gitbook.io/fhirbase/" data-ga="fb-docs-getting-started" data-ga-label="Demo page">Fhirbase Documentation</a>
         </div>
 
         <div id="editor">
