--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
       <div id="right">
         <h3>Snippets</h3>
 
-        <p>TODO</p>
+        <p>Loading...</p>
       </div>
     </div>
     <script src="app.js"></script>
@@ -56,7 +56,8 @@
      gtag('js', new Date());
      gtag('config', 'UA-125233238-1', {
        'page_title' : 'fhirbase-demo',
-       'page_path': '/demo'
+       'page_path': '/demo',
+       'linker': {'domains': ['health-samurai.io', 'fbdemo.aidbox.app', 'fhirbase.aidbox.app']}
      });
     </script>
 
